Fix modal container vertical alignment on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -403,7 +403,6 @@ body {
   z-index: 10;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .modal-container {
@@ -418,6 +417,7 @@ body {
   animation: dropDown 0.4s ease-in-out;
   overflow-y: scroll;
   max-width: 960px;
+  margin: auto;
 }
 
 .modal-close {
